# Crossword-AI

./: LICENSE  README.md  REPORT.md  crossword.py  generate.py  pyproject.toml
data/: structure0.txt  structure1.txt  structure2.txt  words0.txt  words1.txt
