[tool.poetry]
name = "wordplay"
version = "0.1.0"
description = ""
authors = ["Reef Squid <pmavr002@odu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pil-ext = "^0.1"
pil-tools = "^1.1.0"
time-convert = "^1.2.5"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
